test_programs/compile_failure/multiple_primary_attributes_fail/src/main.nr

#[oracle(oracleName)]
#[builtin(builtinName)]
fn main(x: Field) -> pub Field {
    x + 1
}